<resources>
    <string name="app_name">Walmart</string>
    <string name="txt_sign_in_to_your_account">Sign in to your account</string>
    <string name="txt_email_address_required">Email address (required)</string>
    <string name="txt_password_required">Password (required)</string>
    <string name="txt_forgot_password">Forgot password?</string>
    <string name="txt_sign_in">Sign in</string>
    <string name="txt_dont_have_an_account">Do not have an account?</string>
    <string name="txt_create_a_new_account">Create a new account</string>
    <string name="txt_welcome">Welcome</string>
    <string name="txt_shop_by_categories">Shop by categories</string>
    <string name="txt_eletronics">Eletronic</string>
    <string name="txt_clothing">Clothing</string>
    <string name="txt_beauty">Beauty</string>
    <string name="txt_food">Food</string>
    <string name="txt_create_your_account">Create your account</string>
    <string name="txt_required_field">* required field</string>
    <string name="txt_first_name">First name *</string>
    <string name="txt_last_name">Last name *</string>
    <string name="txt_email_address">Email address *</string>
    <string name="txt_password">Password *</string>
    <string name="txt_create_account">Create account</string>
</resources>